autofac and localization working now

--- a/Challenging Challenges/Views/Account/Register.cshtml
+++ b/Challenging Challenges/Views/Account/Register.cshtml
@@ -1,4 +1,5 @@
-﻿@model Challenging_Challenges.Models.ViewModels.RegisterViewModel
+﻿@using Shared.Framework.Resources
+@model Challenging_Challenges.Models.ViewModels.RegisterViewModel
 @{
     ViewBag.Title = Localization.Register;
     Layout = null;
