--- a/Challenging Challenges/Views/Account/UserProfile.cshtml
+++ b/Challenging Challenges/Views/Account/UserProfile.cshtml
@@ -1,6 +1,7 @@
 ﻿@using System.Globalization
 @using Microsoft.AspNet.Identity
 @using Data.Identity.Entities
+@using Shared.Framework.Resources
 @model ApplicationUser
 
 @{
