--- a/Challenging Challenges/Views/Challenges/Index.cshtml
+++ b/Challenging Challenges/Views/Challenges/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model PagedList.IPagedList<Challenging_Challenges.Models.Entities.SearchIndex>
+﻿@using Shared.Framework.Resources
+@model PagedList.IPagedList<Challenging_Challenges.Models.Entities.SearchIndex>
 
 @{
     ViewBag.Title = Localization.AvailableChallenges;
