--- a/Challenging Challenges/Views/Challenges/Solve.cshtml
+++ b/Challenging Challenges/Views/Challenges/Solve.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Challenging_Challenges.Helpers
 @using Microsoft.AspNet.Identity
 @using Data.Challenges.Entities
+@using Shared.Framework.Resources
 @model Challenge
 
 @{
