--- a/Challenging Challenges/Views/Challenges/_ChallengesIndexList.cshtml
+++ b/Challenging Challenges/Views/Challenges/_ChallengesIndexList.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Challenging_Challenges.Helpers
 @using Microsoft.AspNet.Identity
 @using PagedList.Mvc
+@using Shared.Framework.Resources
 @model PagedList.IPagedList<Challenging_Challenges.Models.Entities.SearchIndex>
 
 @if (Model.Count != 0)
