--- a/Challenging Challenges/Views/Home/Index.cshtml
+++ b/Challenging Challenges/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Challenging_Challenges.Enums
+@using Shared.Framework.Resources
 @model Challenging_Challenges.Models.ViewModels.HomeChallengeViewModel
 
 @{
