--- a/Challenging Challenges/Views/Manage/ChangePassword.cshtml
+++ b/Challenging Challenges/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,5 @@
-﻿@model Challenging_Challenges.Models.ViewModels.ChangePasswordViewModel
+﻿@using Shared.Framework.Resources
+@model Challenging_Challenges.Models.ViewModels.ChangePasswordViewModel
 @{
     ViewBag.Title = Localization.ChangePassword;
 }
