--- a/Challenging Challenges/Views/Shared/_Search.cshtml
+++ b/Challenging Challenges/Views/Shared/_Search.cshtml
@@ -1,4 +1,5 @@
-﻿@Styles.Render("~/Content/search")
+﻿@using Shared.Framework.Resources
+@Styles.Render("~/Content/search")
 
 <div class="search">
     @using (Html.BeginForm("Index", "Challenges"))
