--- a/Challenging Challenges/Views/Account/Login.cshtml
+++ b/Challenging Challenges/Views/Account/Login.cshtml
@@ -1,4 +1,5 @@
-﻿@model Challenging_Challenges.Models.ViewModels.LoginViewModel
+﻿@using Shared.Framework.Resources
+@model Challenging_Challenges.Models.ViewModels.LoginViewModel
 @{
     Layout = null;
     ViewBag.Title = Localization.LogIn;
