--- a/Challenging Challenges/Views/Shared/_LoginPartial.cshtml
+++ b/Challenging Challenges/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,5 @@
-﻿@if (Request.IsAuthenticated)
+﻿@using Shared.Framework.Resources
+@if (Request.IsAuthenticated)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new {id = "logoutForm"}))
     {
