--- a/Challenging Challenges/Views/Challenges/Delete.cshtml
+++ b/Challenging Challenges/Views/Challenges/Delete.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Challenging_Challenges.Helpers
 @using Shared.Framework.Resources
-@model Data.Challenges.Entities.Challenge
+@model Business.Challenges.ViewModels.ChallengeViewModel
 
 @{
     ViewBag.Title = Localization.Delete;
