--- a/Challenging Challenges/Views/Challenges/Solve.cshtml
+++ b/Challenging Challenges/Views/Challenges/Solve.cshtml
@@ -4,7 +4,6 @@
 
 @{
     ViewBag.Title = Model.Title;
-    var solver = Model.Solvers.FirstOrDefault(x => x.HasSolved && x.UserId.Equals(User.Identity.GetUserId().ToGuid()));
 }
 
 @Styles.Render("~/Content/challenge-solve")
@@ -20,7 +19,7 @@
 <div class="row">
     <div class="col-md-12">
         <div class="form-group">
-            @if (solver == null && ViewBag.IsAuthor == null)
+            @if (ViewBag.IsSolved == null && ViewBag.IsAuthor == null)
             {
                 using (Html.BeginForm())
                 {
@@ -50,7 +49,7 @@
     </div>
 </div>
 
-@if (ViewBag.IsSolved != null)
+@if (ViewBag.ShowBanner != null && ViewBag.IsSolved != null)
 {
     <div class="row">
         <div class="modal fade bs-modal-lg bs-win-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
