add code executor & extend challenge to have test cases

--- a/Challenging Challenges/Content/Challenges/create.css
+++ b/Challenging Challenges/Content/Challenges/create.css
@@ -72,7 +72,7 @@ div.input-group-option {
   display: inline-block;
   -webkit-appearance: none;
   -moz-appearance: none;
-  appearance: none;
+  /*appearance: none;*/
   cursor: pointer; }
 
 label {
