--- a/Challenging Challenges/Views/Account/UserProfile.cshtml
+++ b/Challenging Challenges/Views/Account/UserProfile.cshtml
@@ -7,7 +7,8 @@
     ViewBag.Title = Model.UserName;
 }
 
-<link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet" />
+@Styles.Render("~/Content/user-profile")
+@*<link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet" />*@
 
 <style>
     .input-username {
@@ -19,7 +20,7 @@
 <div class="panel panel-default">
     <div class="panel-heading">
         <h2>
-            @if (Model.Id.Equals(Guid.Parse(User.Identity.GetUserId())))
+            @if (Model.Id.Equals(User.Identity.GetUserId().ToGuid()))
             {
                 <a href="#" id="change-username">@Model.UserName</a>
             }
@@ -113,8 +114,9 @@
     </div>
 </div>
 @section Scripts {
-    <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
-    <script src="https://cdn.rawgit.com/aterrien/jQuery-Knob/master/js/jquery.knob.js"></script>
+    @Scripts.Render("~/bundles/user-profile")
+    @*<script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
+    <script src="https://cdn.rawgit.com/aterrien/jQuery-Knob/master/js/jquery.knob.js"></script>*@
     <script>
         $(".toplevel").knob({
             'fgColor': '#FFD52A',
@@ -148,16 +150,19 @@
             inputclass: 'input-username',
             error: function (response, newValue) {
                 if (response.status === 400) {
-                    return "@Localization.UserExists";
-                } else {
                     return "@Localization.WrongInput";
+                } else {
+                    return "@Localization.UserExists";
                 }
             }
         });
         $('#change-about').editable({
             pk: 1,
             url: '@Url.Action("SetAbout", "Manage")',
-            type: "textarea"
+            type: "textarea",
+            error: function () {
+                return "@Localization.WrongInput";
+            }
         });
     </script>
 }
