--- a/Challenging Challenges/Views/Challenges/Solve.cshtml
+++ b/Challenging Challenges/Views/Challenges/Solve.cshtml
@@ -1,9 +1,11 @@
-﻿@using Microsoft.AspNet.Identity
-@using Shared.Framework.Resources
+﻿@using Shared.Framework.Resources
 @model Business.Challenges.ViewModels.ChallengeFullViewModel
 
 @{
     ViewBag.Title = Model.Title;
+    var isSolved = (bool?) ViewBag.IsSolved ?? false;
+    var isAuthor = (bool?) ViewBag.IsAuthor ?? false;
+    var showBanner = (bool?) ViewBag.ShowBanner ?? false;
 }
 
 @Styles.Render("~/Content/challenge-solve")
@@ -19,7 +21,7 @@
 <div class="row">
     <div class="col-md-12">
         <div class="form-group">
-            @if (ViewBag.IsSolved == null && ViewBag.IsAuthor == null)
+            @if (!isSolved && !isAuthor)
             {
                 using (Html.BeginForm())
                 {
@@ -49,14 +51,14 @@
     </div>
 </div>
 
-@if (ViewBag.ShowBanner != null && ViewBag.IsSolved != null)
+@if (showBanner)
 {
     <div class="row">
         <div class="modal fade bs-modal-lg bs-win-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
             <div class="modal-dialog modal-lg win-modal">
                 <div class="modal-content win-modal-content">
                     <div class="modal-body win-modal-body">
-                        @if (ViewBag.IsSolved)
+                        @if (isSolved)
                         {
                             <a href="javascript:$('.bs-modal-lg').modal('toggle');" class="button btn btn-success" style="float: right">@Localization.Return</a>
                             <h1>@Localization.RightEx</h1>
