--- a/Challenging Challenges/Views/Shared/_Layout.cshtml
+++ b/Challenging Challenges/Views/Shared/_Layout.cshtml
@@ -7,12 +7,13 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/flick/jquery-ui.css">
+    @*<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/flick/jquery-ui.css">*@
     @Styles.Render("~/Content/search")
     @Styles.Render("~/Content/achievement")
     @(HttpContext.Current.Request.Cookies["theme"]?.Value == "dark" ? Styles.Render("~/Content/dark") : Styles.Render("~/Content/light"))
-    <link href="//fonts.googleapis.com/css?family=Titillium+Web:200,400,300,600" rel="stylesheet" type="text/css">
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet" type="text/css">
+    @Styles.Render("~/Content/fonts")
+    @*<link href="//fonts.googleapis.com/css?family=Titillium+Web:200,400,300,600" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet" type="text/css">*@
 </head>
 <body>
 
@@ -91,7 +92,7 @@
 @Html.Partial("_Search")
 
 @Scripts.Render("~/bundles/jquery")
-<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+@*<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>*@
 @Scripts.Render("~/bundles/signalr")
 <script src="~/signalr/hubs"></script>
 <script>
@@ -100,6 +101,7 @@
         achievementsHub.client.showAchievement = function(achievement) {
             $(".achievement-name").text(achievement);
             $(".achievement-banner").css('display', 'block');
+            setTimeout(function () { $(".achievement-banner").css('display', 'none'); }, 5000);
         }
         $.connection.hub.start();
     });
