about to go forms

--- a/Presentation/Presentation.Web/ClientApp/app/components/counter/counter.component.html
+++ b/Presentation/Presentation.Web/ClientApp/app/components/counter/counter.component.html
@@ -10,6 +10,8 @@
 
 <button (click)="logout()">Logout</button>
 
+<button (click)="test()">Test Auth</button>
+
 <div *ngIf="isLoggedOn()">
     Logged On!
 </div>
