--- a/Presentation/Presentation.Web/Views/Home/Index.cshtml
+++ b/Presentation/Presentation.Web/Views/Home/Index.cshtml
@@ -7,5 +7,6 @@
 
 <script src="~/dist/vendor.js" asp-append-version="true"></script>
 @section scripts {
+    @Html.Partial("_Actions")
     <script src="~/dist/main-client.js" asp-append-version="true"></script>
 }
