--- a/Presentation/Presentation.Web/Views/Shared/_Layout.cshtml
+++ b/Presentation/Presentation.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8" />
@@ -9,7 +9,7 @@
     </head>
     <body>
         @RenderBody()
-
+        
         @RenderSection("scripts", required: false)
     </body>
 </html>
