--- a/Presentation/Presentation.Web/ClientApp/app/app.component.html
+++ b/Presentation/Presentation.Web/ClientApp/app/app.component.html
@@ -7,6 +7,7 @@
         </div>
         <div class='col-sm-9 body-content'>
             <router-outlet></router-outlet>
+            <router-outlet name="popup"></router-outlet>
         </div>
     </div>
 </div>
