--- a/Presentation/Presentation.Web/ClientApp/app/auth/login/login-dialog.component.html
+++ b/Presentation/Presentation.Web/ClientApp/app/auth/login/login-dialog.component.html
@@ -1,22 +1,8 @@
-<h1 md-dialog-title>Dialog</h1>
+<h1 md-dialog-title>Войти</h1>
 <div md-dialog-content>
     What would you like to do?
-    <div class="container">
-    <h1>Hero Form</h1>
-    <form>
-      <div class="form-group">
-        <label for="name">Name</label>
-        <input type="text" class="form-control" id="name" required>
-      </div>
-      <div class="form-group">
-        <label for="alterEgo">Alter Ego</label>
-        <input type="text" class="form-control" id="alterEgo">
-      </div>
-      <button type="submit" class="btn btn-success">Submit</button>
-    </form>
-</div>
 </div>
 <div md-dialog-actions>
-  <button md-button (click)="dialogRef.close('Option 1')">Option 1</button>
-  <button md-button (click)="dialogRef.close('Option 2')">Option 2</button>
+  <button md-button (click)="login()">Войти</button>
+  <button md-button (click)="register()">Регистрация</button>
 </div>
