--- a/Presentation/Presentation.Web/ClientApp/app/auth/login/login.component.html
+++ b/Presentation/Presentation.Web/ClientApp/app/auth/login/login.component.html
@@ -1,1 +1,5 @@
-<button md-button (click)="openDialog()">Войти</button>
+<li>
+    <a (click)="openDialog()">
+        <span class='glyphicon glyphicon-user'></span> Войти
+    </a>
+</li>
