--- a/Presentation/Presentation.Web/ClientApp/app/app.component.html
+++ b/Presentation/Presentation.Web/ClientApp/app/app.component.html
@@ -1,13 +1,18 @@
 <p-growl [value]="messages"></p-growl>
 
-<div class='container-fluid'>
-    <div class='row'>
-        <div class='col-sm-3'>
-            <nav-menu></nav-menu>
-        </div>
-        <div class='col-sm-9 body-content'>
-            <router-outlet></router-outlet>
-            <router-outlet name="popup"></router-outlet>
+<md-sidenav-container>
+    <md-sidenav #sidebar>
+        <nav-menu></nav-menu>
+    </md-sidenav>
+
+    <div class='container'>
+        <div class='row'>
+            <button md-button (click)="sidebar.open()">open sidebar</button>
+            <button md-button (click)="sidebar.close()">close sidebar</button>
+            <div class='col-sm-9 body-content'>
+                <router-outlet></router-outlet>
+                <router-outlet name="popup"></router-outlet>
+            </div>
         </div>
     </div>
-</div>
+</md-sidenav-container>
