--- a/Presentation/Presentation.Web/Views/Home/Index.cshtml
+++ b/Presentation/Presentation.Web/Views/Home/Index.cshtml
@@ -5,8 +5,6 @@
 @*<app asp-prerender-module="ClientApp/dist/main-server">Loading...</app>*@
 <app>Loading...</app>
 
-<script src="~/dist/vendor.js" asp-append-version="true"></script>
 @section scripts {
-    @Html.Partial("_Actions")
-    <script src="~/dist/main-client.js" asp-append-version="true"></script>
+    @Html.Partial("_Scripts")
 }
