--- a/Presentation/Presentation.Web/ClientApp/app/auth/login/login.component.html
+++ b/Presentation/Presentation.Web/ClientApp/app/auth/login/login.component.html
@@ -1,5 +1,4 @@
-<li>
-    <a (click)="openDialog()">
-        <span class='glyphicon glyphicon-user'></span> Войти
-    </a>
-</li>
+<a md-list-item (click)="openDialog()">
+    <md-icon>accessibility</md-icon>
+    <span> Логин</span>
+</a>
