--- a/Presentation/Presentation.Web/ClientApp/app/navmenu/navmenu.component.html
+++ b/Presentation/Presentation.Web/ClientApp/app/navmenu/navmenu.component.html
@@ -3,8 +3,10 @@
         Challenging Challenges
     </a>
     <a md-list-item [routerLinkActive]="['light-primary-color']" [routerLink]="['/counter']">
-        <md-icon>check_circle</md-icon> Counter
+        <md-icon>check_circle</md-icon>
+        <span> Counter</span>
     </a>
+    <auth></auth>
 </md-nav-list>
 
 <!--<div class='main-nav'>
