--- a/Presentation/Presentation.Web/ClientApp/app/auth/login/login.component.html
+++ b/Presentation/Presentation.Web/ClientApp/app/auth/login/login.component.html
@@ -1,4 +1,1 @@
-<a md-list-item (click)="openDialog()">
-    <md-icon>accessibility</md-icon>
-    <span> Логин</span>
-</a>
+<a class="mdl-navigation__link" (click)="openDialog()"> Логин</a>
