--- a/Presentation/Presentation.Web/ClientApp/app/navmenu/navmenu.component.html
+++ b/Presentation/Presentation.Web/ClientApp/app/navmenu/navmenu.component.html
@@ -1,4 +1,8 @@
-<md-nav-list>
+
+
+
+
+<!--<md-nav-list>
     <a md-list-item class="default-primary-color" [routerLink]="['/home']">
         Challenging Challenges
     </a>
@@ -7,7 +11,7 @@
         <span> Counter</span>
     </a>
     <auth></auth>
-</md-nav-list>
+</md-nav-list>-->
 
 <!--<div class='main-nav'>
     <div class='navbar navbar-inverse'>
