--- a/Presentation/Presentation.Web/Views/Shared/_Layout.cshtml
+++ b/Presentation/Presentation.Web/Views/Shared/_Layout.cshtml
@@ -1,11 +1,10 @@
 ﻿<!DOCTYPE html>
-<html>
+<html ⚡>
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Challenging Challenges</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <base href="/" />
-        <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
     </head>
     <body>
         @RenderBody()
