--- a/Presentation/Presentation.Web/Views/Shared/_Scripts.cshtml
+++ b/Presentation/Presentation.Web/Views/Shared/_Scripts.cshtml
@@ -1,5 +1,8 @@
 ﻿<script src="~/dist/vendor.js" asp-append-version="true"></script>
+
 @Html.Partial("_Actions")
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.light_green-amber.min.css" />
 
 <script src="~/dist/main-client.js" asp-append-version="true"></script>
