--- a/Presentation/Presentation.Web/ClientApp/app/app.component.css
+++ b/Presentation/Presentation.Web/ClientApp/app/app.component.css
@@ -1,8 +1,3 @@
-#main-content {
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-
-mdl-layout-drawer a {
-    text-decoration: none !important;
+.mdl-padded {
+  padding: 8px;
 }
