--- a/Presentation/Presentation.Web/ClientApp/app/auth/auth.component.html
+++ b/Presentation/Presentation.Web/ClientApp/app/auth/auth.component.html
@@ -1,2 +1,6 @@
-<login *ngIf="!authService.isLoggedOn()" (onDialogClosed)="onItemClicked.emit()"></login>
+<div class="cursor-pointer" *ngIf="!isLoggedOn()">
+    <a class="mdl-navigation__link" (click)="openLoginDialog()">Войти</a>
+</div>
+
+<!--<login *ngIf="!authService.isLoggedOn()" (onDialogOpened)="onNavigated()"></login>-->
 <!--<register></register>-->
