--- a/Presentation/Presentation.Web/ClientApp/app/components/counter/counter.component.html
+++ b/Presentation/Presentation.Web/ClientApp/app/components/counter/counter.component.html
@@ -1,20 +1,26 @@
-<h1>Counter</h1>
+<div class="mdl-grid">
+    <div mdl-shadow="2" class="mdl-cell mdl-cell--12-col mdl-padded">
+        <h1>Counter</h1>
 
-<p>This is a simple example of an Angular 2 component.</p>
+        <p>This is a simple example of an Angular 2 component.</p>
 
-<p>Current count: <strong>{{ currentCount }}</strong></p>
+        <p>Current count: <strong>{{ currentCount }}</strong></p>
 
-<button (click)="incrementCounter()">Increment</button>
+        <button (click)="incrementCounter()">Increment</button>
 
-<button (click)="login()">Login</button>
+        <button (click)="login()">Login</button>
 
-<button (click)="logout()">Logout</button>
+        <button (click)="register()">Register</button>
 
-<button (click)="test()">Test Auth</button>
+        <button (click)="logout()">Logout</button>
 
-<div *ngIf="isLoggedOn()">
-    Logged On!
-</div>
-<div *ngIf="!isLoggedOn()">
-    NOT Logged On!
+        <button (click)="test()">Test Auth</button>
+
+        <div *ngIf="isLoggedOn()">
+            Logged On!
+        </div>
+        <div *ngIf="!isLoggedOn()">
+            NOT Logged On!
+        </div>  
+    </div>
 </div>
