--- a/Presentation/Presentation.Web/ClientApp/app/auth/auth.component.html
+++ b/Presentation/Presentation.Web/ClientApp/app/auth/auth.component.html
@@ -1,5 +1,6 @@
 <div class="cursor-pointer" *ngIf="!isLoggedOn()">
     <a class="mdl-navigation__link" (click)="openLoginDialog()">Войти</a>
+    <a class="mdl-navigation__link" (click)="openRegistrationDialog()">Регистрация</a>
 </div>
 
 <!--<login *ngIf="!authService.isLoggedOn()" (onDialogOpened)="onNavigated()"></login>-->
