--- a/Presentation/Presentation.Web/ClientApp/app/app.component.html
+++ b/Presentation/Presentation.Web/ClientApp/app/app.component.html
@@ -1,5 +1,3 @@
-<simple-notifications [options]="options"></simple-notifications>
-
 <mdl-layout mdl-layout-fixed-header mdl-layout-fixed-drawer>
     <mdl-layout-header class="mdl-color--grey-100 mdl-color-text--grey-600">
         <mdl-layout-header-row>
@@ -17,4 +15,5 @@
     </mdl-layout-content>
 </mdl-layout>
 
+<simple-notifications [options]="notificationOptions"></simple-notifications>
 <dialog-outlet></dialog-outlet>
