--- a/Presentation/Presentation.Web/ClientApp/app/app.component.css
+++ b/Presentation/Presentation.Web/ClientApp/app/app.component.css
@@ -6,7 +6,7 @@
   z-index: 100002 !important;
 }
 
-mdl-textfield.ng-invalid.ng-touched .mdl-textfield__input {
+.mdl-textfield.ng-invalid.ng-touched .mdl-textfield__input {
     border-color: #d50000;
     box-shadow: none;
 }
@@ -14,9 +14,9 @@ mdl-textfield.ng-invalid.ng-touched .mdl-textfield__input {
     color: #d50000;
     font-size: 12px
 }
-mdl-textfield.ng-invalid.ng-touched .mdl-textfield__label:after {
+.mdl-textfield.ng-invalid.ng-touched .mdl-textfield__label:after {
     background-color: #d50000
 }
-mdl-textfield.ng-invalid.ng-touched .mdl-textfield__error {
+.mdl-textfield.ng-invalid.ng-touched .mdl-textfield__error {
     visibility: visible;
 }
