--- a/Presentation/Presentation.Web/ClientApp/app/auth/register/register-dialog.component.html
+++ b/Presentation/Presentation.Web/ClientApp/app/auth/register/register-dialog.component.html
@@ -1,31 +1,26 @@
 <h3 class="mdl-dialog__title">Регистрация</h3>
 <form [formGroup]="registerForm" (ngSubmit)="register()">
     <div class="mdl-dialog__content">
-        <mdl-textfield formControlName="userName"
+        <mdl-textfield-validated [formControl]="registerForm.controls.userName"
                     label="Имя пользователя"
                     name="userName"
                     type="text"
-                    formControlName="userName"
-                    floating-label></mdl-textfield>
-        <mdl-textfield formControlName="email"
+                    floating-label></mdl-textfield-validated>
+        <mdl-textfield-validated [formControl]="registerForm.controls.email"
                     label="Электронная почта"
                     name="email"
                     type="text"
-                    formControlName="email"
-                    floating-label></mdl-textfield>
-        <mdl-textfield formControlName="password"
+                    floating-label></mdl-textfield-validated>
+        <mdl-textfield-validated [formControl]="registerForm.controls.password"
                     label="Пароль"
                     name="password"
                     type="password"
-                    formControlName="password"
-                    floating-label></mdl-textfield>
-        <mdl-textfield formControlName="confirmPassword"
+                    floating-label></mdl-textfield-validated>
+        <mdl-textfield-validated [formControl]="registerForm.controls.confirmPassword"
                     label="Подтверждение пароля"
                     name="confirmPassword"
                     type="password"
-                    formControlName="confirmPassword"
-                    error-msg="Пароли должны совпадать."
-                    floating-label></mdl-textfield>
+                    floating-label></mdl-textfield-validated>
     </div>
     <div class="mdl-dialog__actions">
         <button mdl-button [disabled]="!registerForm.valid" type="submit" mdl-button-type="raised" mdl-colored="primary" mdl-ripple>Регистрация</button>
