--- a/Presentation/Presentation.Web/ClientApp/app/home/home.component.html
+++ b/Presentation/Presentation.Web/ClientApp/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="mdl-grid">
-    <div mdl-shadow="2" class="mdl-cell mdl-cell--12-col mdl-padded">
-        <h1>nothin here</h1> 
+    <div>
+        <latest-challenges></latest-challenges>
     </div>
 </div>
